--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Ignore environment variable files
-.env
+
 
 # Ignore build output (for frontend projects)
 frontend/build
@@ -24,4 +23,4 @@ Thumbs.db
 
 # Ignore temporary files
 *.tmp
-
+git add .gitignore
