--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,12 +31,13 @@
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
     "redux": "^5.0.1",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
+    
   
     "eslint": "^9.9.0",
     "eslint-plugin-react": "^7.35.0",
